force-app/main/default/objects/talkdesk__Talkdesk_Public__c/talkdesk__Talkdesk_Public__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Talkdesk Public</label>
</CustomObject>