force-app/main/default/objects/talkdesk__Talkdesk_Public__c/fields/talkdesk__Dialer_Call_Failed_Timeout__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Dialer_Call_Failed_Timeout__c</fullName>
    <defaultValue>20</defaultValue>
    <inlineHelpText>Number of seconds that dialer waits for a call ringing event from Talkdesk until declaring the
            status Failed.</inlineHelpText>
    <label>Dialer Timeout (sec)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>