force-app/main/default/objects/talkdesk__Talkdesk_Public__c/fields/talkdesk__Environment_Instance__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Environment_Instance__c</fullName>
    <defaultValue>&quot;Production&quot;</defaultValue>
    <label>Environment Instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>