force-app/main/default/objects/talkdesk__Talkdesk_Public__c/fields/talkdesk__Timezone__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Timezone__c</fullName>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>